tests/errors/module-member-typo/main.pa
use std/list

def main = list.lenght
